fix panel-collapse on mobile

--- a/tangthuvien/static/css/style.css
+++ b/tangthuvien/static/css/style.css
@@ -23,3 +23,6 @@ footer {
 .modal.in .modal-dialog{
     padding: 0;
 }
+.dropdown-backdrop {
+    position: static;
+}
